# Modus

./: .gitignore  CMakeLists.txt
cmake/: config.h.in
doc/: config
resources/: resources.qrc
resources/styles/: modern.qss
scripts/: clean.sh  installKCL.sh
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  abstractsubproject.cpp  abstractsubproject.h  aliasdata.h  constants.h  constraints.cpp  constraints.h  fileutility.cpp  fileutility.h  fluttersolver.cpp  fluttersolver.h  geometry.cpp  geometry.h  identifier.cpp  identifier.h  iserializable.h  isolver.h  kclsubproject.cpp  kclsubproject.h  mathutility.cpp  mathutility.h  modalsolution.cpp  modalsolution.h  modalsolver.cpp  modalsolver.h  optimconstraints.cpp  optimconstraints.h  optimselector.cpp  optimselector.h  optimsolver.cpp  optimsolver.h  project.cpp  project.h  selectionset.cpp  selectionset.h  selector.cpp  selector.h  subproject.cpp  subproject.h
src/frontend/: CMakeLists.txt  abstracthierarchyitem.cpp  abstracthierarchyitem.h  aerotrapeziumeditor.cpp  aerotrapeziumeditor.h  analysisparameterseditor.cpp  analysisparameterseditor.h  beameditor.cpp  beameditor.h  constantseditor.cpp  constantseditor.h  constraintseditor.cpp  constraintseditor.h  customplot.cpp  customplot.h  customtable.cpp  customtable.h  customtabwidget.cpp  customtabwidget.h  decrementseditor.cpp  decrementseditor.h  editormanager.cpp  editormanager.h  flutteroptionseditor.cpp  flutteroptionseditor.h  flutterview.cpp  flutterview.h  generaldataeditor.cpp  generaldataeditor.h  geometryview.cpp  geometryview.h  hierarchyitem.cpp  hierarchyitem.h  iview.h  lineedit.cpp  lineedit.h  logger.cpp  logger.h  logview.cpp  logview.h  (+40 more)
tests/testbackend/: testbackend.cpp  testbackend.h
tests/testfrontend/: CMakeLists.txt  testfrontend.cpp  testfrontend.h
